<resources>
    <string name="app_name">Budget To Zero</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spend_button">Spend</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_advanced">Advanced</string>
    <string name="menu_categoryManager">Category Manager</string>
    <string name="menu_editBudget">Edit Budget</string>
    <string name="settings">Settings</string>
    <string name="add_category">Add Category</string>
    <string name="deleteHeader">Delete: </string>
    <string name="are_you_sure_message">Are you sure you want to delete this category?\nThis action can not be undone</string>
    <string name="options">Options</string>
    <string name="delete_extra">Delete all purchases in category</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rename_category">Rename Category</string>
    <string name="remaining">▼ Remaining out of: $</string>
    <string name="spentoutof">▲ Spent out of: $</string>
    <string name="days_remaing">Days remaining </string>
    <string name="budgetcountdirection">Budget Count Direction</string>
    <string name="countDirectionDown">Down: $25.00 Remaining</string>
    <string name="countDirectionUP">Up: $0.00 Spent</string>
    <string name="ShowHistory">Show History</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="autoBudgetResetPeriod">Auto Budget Reset Period</string>
    <string name="autoBudgetResetPeriod_NONE">None / Off</string>
    <string name="autoBudgetResetPeriod_DAYLY">Daily</string>
    <string name="autoBudgetResetPeriod_WEEKLY">Weekly</string>
    <string name="autoBudgetResetPeriod_BIWEEKLY">Biweekly</string>
    <string name="autoBudgetResetPeriod_MONTHLY">Monthly</string>
    <string name="deleteHistory">Delete History on auto-reset</string>
    <string name="budgetrollover">Budget Rollover:</string>
    <string name="rolloverDiscription">Add unspent funds to the next budget</string>
    <string name="done">Done</string>
    <string name="action_settings">Settings</string>
    <string name="new_budget">New Budget:</string>
    <string name="optional_hint">(Optional)</string>
    <string name="optional_clearLog">Clear History Log:</string>
    <string name="cancel">Cancel</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="refund_purchase">Refund Purchase</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>
    <string name="cost">Cost:</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_refund">Refund</string>
    <string name="today">Today</string>
    <string name="category_name">Cat. Name:</string>
    <string name="hint_catName">Food</string>
    <string name="total$">Total $:</string>
    <string name="menu_category">Category:</string>
</resources>
