<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#607d8b">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#607d8b"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/new_budget"
                android:id="@+id/textView5"
                android:paddingTop="40dp"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:maxLength="25"
                android:id="@+id/editbudget_newBudget"
                android:hint="@string/optional_hint"
                android:textColorHint="#9E9E9E"
                android:textColor="#FFFFFF"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/optional_clearLog"
                android:textColor="#FFFFFF"
                android:id="@+id/tvEditHistory" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="#FFFFFF"
                android:id="@+id/rbEditHistoryYES"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="#FFFFFF"
                android:id="@+id/rbEditHistoryNO"
                android:checked="true" />


            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_alignParentBottom="true"
                android:paddingTop="40dp">
                <Button
                    android:id="@+id/bEditDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/done">
                </Button>
                <Button
                    android:id="@+id/bEditCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>