<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF">
    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/menuWrapper"
        android:orientation="vertical">

        <Button
            android:id="@+id/menuButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_edit"
            android:drawableLeft="@mipmap/ic_mode_edit_black_24dp"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/menuButtonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_delete"
            android:drawableLeft="@mipmap/ic_delete_black_24dp"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/menuButtonRefund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_refund"
            android:drawableLeft="@mipmap/ic_history_black_24dp"
            android:background="?android:attr/selectableItemBackground"/>

    </LinearLayout>
</LinearLayout>
