<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#607d8b">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:background="#607d8b">


            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:windowSoftInputMode="stateHidden"
                android:theme="@android:style/Theme.Black"
                android:spinnersShown="true"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:id="@+id/datePicker" />

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"

                android:layout_alignParentBottom="true">
                <Button
                    android:id="@+id/bCalenderDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/done">
                </Button>
                <Button
                    android:id="@+id/bCalenderCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="155dp"
                    android:layout_height="80dp"
                    android:paddingTop="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/date"
                    android:textSize="30sp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />


                <Button
                    android:id="@+id/bDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:text="@string/today"
                    android:textColor="#E0E0E0"
                    android:background="@android:color/transparent"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDiscription"
                    android:layout_width="wrap_content"
                    android:textSize="30sp"
                    android:layout_height="86dp"
                    android:background="@android:color/transparent"
                    android:text="@string/description"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/etDiscription"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:ems="10"
                    android:maxLength="25"
                    android:textColor="#E0E0E0"
                    android:hint="@string/optional_hint"
                    android:gravity="center"
                    android:textColorHint="#9E9E9E" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="155dp"
                    android:layout_height="80dp"
                    android:paddingTop="15dp"
                    android:background="@android:color/transparent"
                    android:text="Sel. Cat:"
                    android:textSize="30sp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF"
                    />

                <Spinner
                    android:paddingLeft="50dp"
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#E0E0E0"
                    android:gravity="right"
                    android:background="@android:color/transparent"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvNewCategory"
                    android:layout_width="152dp"
                    android:layout_height="92dp"
                    android:textSize="30sp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/etNewCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:textColor="#E0E0E0"
                    android:inputType="text"
                    android:hint="@string/hint_catName"
                    android:gravity="center"
                    android:textColorHint="#9E9E9E"
                    android:visibility="gone"
                    android:maxLength="20"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvTotalHeader"
                    android:layout_width="152dp"
                    android:layout_height="92dp"
                    android:textSize="30sp"
                    android:background="@android:color/transparent"
                    android:text="@string/total$"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/etPurchaseTotal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:textColor="#E0E0E0"
                    android:maxLength="20"
                    android:inputType="numberDecimal"
                    android:hint="$0.00"
                    android:gravity="center"
                    android:textColorHint="#E0E0E0" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/done"
                android:id="@+id/bPurchaseDone"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.11" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>